style.css
@font-face {
  font-family: 'Mukta Malar';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/muktamalar/v12/MCoXzAXyz8LOE2FpJMxZqIv_J_U.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
    font-family: 'Mukta Malar';
    font-style: normal;
    font-weight: 700;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/muktamalar/v12/MCoKzAXyz8LOE2FpJMxZqINEAuAG4Ws.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

* {
    font-family: 'Mukta Malar', 'Helvetica';
}

header {
    width: 100%;
    height: 50px;
    display: flex;
    justify-content: space-between;
    margin: 50px auto 0px;
    align-items: center;
}

nav ul {
    display: flex;
    margin: 0 20px;
    flex-wrap: wrap;
    background-color: white;
    padding: 0;
}

nav li {
    display: inline-flex;
    text-decoration: underline;
    margin: 0 12px;
}

body {
    margin-left: 10%;
}

h2 {
    font-weight: bold;
    margin-bottom: 0px;
}

#about {
    margin: 0 5%;
}

.bios {
    display: flex;
    flex-wrap: wrap;
    width: 80%;
    margin-left: 5%;
    margin-bottom: 100px;
}

.bios div {
    display: inline-flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 auto;
    width: 350px;
}

.bios > div {
    border: solid black;
    border-radius: 10px;
    background-color: rgb(222 184 135 / 0.4);
    margin-top: 20px;
}

.bioitem {
    display: inline-flex;
    flex-wrap: wrap;
}

.bioitem ul {
    text-align: left;
    width: 100%;
    columns: 2;
    list-style-type: none;
}

footer {
    position: fixed;
    display: flex;
    left: 0px;
    bottom: 0px;
    height: 40px;
    width: 100%;
    background:#999;
    align-items: center;
    justify-content: center;
    color: black;
}

#hamburger-input {
    visibility: hidden;
}

.night-mode-bios {
    border: solid rgb(41, 20, 225) !important;
    background-color: rgba(8, 3, 25, 0.877) !important;
    color: rgb(214, 214, 208);
}

.night-mode {
    background-color: black;
    color: white;
}

@media only screen and (max-width: 650px) {
    _::-webkit-full-page-media, _:future, :root .safari_only {
        padding-bottom: 65px;
    }

    #hamburger-menu {
        width: 50px;
        height: 30px;
        display: block;
        border: none;
        padding: 0px;
        margin: 20px;
        background: linear-gradient(
            to bottom, 
            #3D0E61, #3D0E61 20%, 
            white 20%, white 40%, 
            #3D0E61 40%, #3D0E61 60%, 
            white 60%, white 80%, 
            #3D0E61 80%, #3D0E61 100%
        );
    }

    .night-hamburger {
        background: linear-gradient(
            to bottom, 
            #3D0E61, #3D0E61 20%, 
            black 20%, black 40%, 
            #3D0E61 40%, #3D0E61 60%, 
            black 60%, black 80%, 
            #3D0E61 80%, #3D0E61 100%
        ) !important;
    }

    #hamburger-menu #sidebar-menu {
        visibility: hidden;
        position: relative;
        top: 0;
        right: -50px;
        /*width: 70px;*/
        height: 100%;
        padding: 10px 10px;
        box-sizing: border-box;
    }

    #hamburger-input:checked + #hamburger-menu #sidebar-menu {
        visibility: visible;
        top: 30px;
        float: right;
    }
}

